Spew more nonsense

--- a/back.tex
+++ b/back.tex
@@ -16,10 +16,20 @@ For typography:
 \begin{adjustwidth}{1.5em}{0pt}
 \textit{Practical Typography}, by Matthew Butterick. \\
 Available at \url{https://practicaltypography.com}
+
+\textit{Stop Stealing Sheep \& Find Out How Type Works}, by Erik Spikermann
+
+\textit{Thinking With Type}, by Ellen Lupton
+
+\textit{The Elements of Typographic Style}, by Robert Bringhurst
+
+\textit{Detail in Typography}, by Jost Hochuli
 \end{adjustwidth}
 
-\parindent 0pt
+{\raggedright
+\renewcommand\makeenmark{\theenmark.\enspace}
 \theendnotes
+}
 
 \chapter{Colophon}
 
