--- a/back.tex
+++ b/back.tex
@@ -33,12 +33,43 @@ Available at \url{https://practicaltypography.com}
 
 \chapter{Colophon}
 
-This guide was typeset using \LuaLaTeX{}
-in Adobe Garamond Pro,
-with code in Matthias Tellen's
-\href{https://madmalik.github.io/mononoki/}{\texttt{mononoki}}.
+This guide was typeset using \LuaLaTeX{} in Adobe Garamond Pro by
+Robert Slimbach.
+His historical revival is based on the Roman type of
+the 16{\addfontfeature{VerticalPosition=Superior}th} century French
+punchcutter Claude Garamond.
+Italics are based on the work of his contemporary Robert Granjon.
+
+Monospaced items are set in Matthias Tellen's
+\href{https://madmalik.github.io/mononoki/}{\texttt{mononoki}},
+a typeface designed to work well on both low-resolution computer monitors
+and in high-resolution print.
+
 Captions are set in
 \href{http://www.fontbureau.com/NHG/}{\textsf{\small Neue Haas Grotesk}},
 a Helvetica restoration by Christian Schwartz.
+Other digitizations of the classic Swiss typeface are based on versions made for
+Linotype and phototypesetting machines,
+resulting in digital fonts with all the compromises and kludges from the past two
+generations of printing technology.
+Schwartz based his work on Helvetica's original drawings,
+resulting in a design faithful to the original cold-metal type.
 
-% Update with Futura, TeX Gyre, and friends. No captions yet, by the way.
+{\fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Boo}URW Futura}
+makes a guest appearance
+for typographical examples on page \pageref{typography}.
+Originally released in 1927 by Paul Renner,
+Futura has found itself almost everywhere,
+from advertising and political campaigns to the moon.
+Douglas Thomas's recent history of the typeface,
+\textit{Never Use Futura}, is a fantastic read.
+
+Finally,
+Latin Modern---the OpenType version of Knuth's Computer Modern---as well
+as {\fontspec[Scale=MatchUppercase]{TeX Gyre Termes}\TeX{} Gyre Termes}---a
+free alternative to Times Roman seen on page \pageref{typography}---are from
+the digital type foundry of Grupa Użytkowników Systemu \TeX{},
+the Polish \TeX{} Users' Group.
+An overview of their excellent work can be found at the following locations:\\
+\url{http://www.gust.org.pl/projects/e-foundry/latin-modern} \\
+\url{http://www.gust.org.pl/projects/e-foundry/tex-gyre}.
