--- a/latex-book.tex
+++ b/latex-book.tex
@@ -50,6 +50,7 @@
 
 \usepackage{polyglossia}
 \setdefaultlanguage[variant=american]{english}
+\setotherlanguage{vietnamese}
 
 \usepackage{blindtext}
 
@@ -94,12 +95,12 @@
 \setfnsymbol{tweaked}
 \deffootnotemark{\thefootnotemark}
 
-% Use the tocstyle package to give all ToC items sans serif font.
-% Note: tocstyle is currently in alpha, so feel free to tweak this as needed.
-% At time of writing, it seems to be the simplest way to get the intended effect.
-\usepackage{tocstyle}
-\settocfeature{entryhook}{\addfontfeature{Numbers={Tabular,Uppercase}}}
-\settocfeature{entryvskip}{2pt}
+\DeclareTOCStyleEntry[%
+    beforeskip=5pt,
+    entrynumberformat = \addfontfeature{Numbers={Tabular,Uppercase}},
+    pagenumberformat = \addfontfeature{Numbers={Tabular,Uppercase}},
+    linefill = \TOCLineLeaderFill
+]{tocline}{chapter}
 
 % Don't use a sans font for description labels.
 \addtokomafont{descriptionlabel}{\rmfamily\mdseries}
@@ -169,7 +170,7 @@
 % for a tighter look.
 % Care should be taken to not make it too tight - f" and the like can overlap
 % if you're not careful.
-\newcommand{\punckern}{\kern-0.2ex}
+\newcommand{\punckern}{\kern-0.3ex}
 % For placing commas close to, or under, quotes they follow.
 % We're programmers, and we blatantly disregard American typographical norms
 % to put the quotes inside, but we can at least make it look a bit nicer.
@@ -212,16 +213,17 @@
 
 % Custom title instead of \maketitle
 \pagenumbering{gobble}
-\null
-\vfil
+\vspace*{1.5in}
 \begin{center}
 \fontsize{0.5in}{0.7in}\selectfont
 Modern
 
 \fontsize{1in}{1.1in}\selectfont
 \LaTeX
+\vfill
+\LARGE
+Matt Kline
 \end{center}
-\vfil
 \clearpage
 
 \null
@@ -229,9 +231,19 @@ Modern
 Some crappy draft, typeset \today.
 \vspace*{0.5in}
 
+The author apologizes for typos, misattributions, or any other flubs,
+and welcomes you to point them out on this book's Github
+repository at \\
+\url{https://github.com/mrkline/latex-book}, or via email to \\
+\texttt{matt <at> bitbashing.io}
+
+The author does not have a checking account with the Bank of San Serriffe,
+but will happily purchase a beverage of your choice the next time we meet.
+
+\vspace*{0.5in}
 {\addfontfeature{Numbers={Proportional,Uppercase}}
 Copyright © 2018 \\
-by Matthew Kline
+by \runauthor
 \bigskip
 
 This book is licensed under the \\
@@ -266,11 +278,6 @@ his college papers.
 \appendix
 
 \input{history}
-
-\backmatter
-\setkomafont{chapter}{\LARGE\itshape}
-\setlength\parskip{\baselineskip}
-\setlength\parindent{0pt}
 
 \input{back}
 
