--- a/back.tex
+++ b/back.tex
@@ -62,7 +62,7 @@ Linotype and phototypesetting machines,
 resulting in digital fonts with all the compromises and kludges from the past two
 generations of printing technology.
 Schwartz based his work on Helvetica's original drawings,
-resulting in a design faithful to the original cold-metal type.
+resulting in a design faithful to the original cold metal type.
 
 {\fontspec[Ligatures=TeX, Scale=MatchLowercase]{Futura-Boo}URW Futura}
 makes a guest appearance
