--- a/latex-book.tex
+++ b/latex-book.tex
@@ -158,7 +158,7 @@
     xleftmargin=2em
 }
 
-\title{LaTeX and Modern Typography}
+\title{Modern LaTeX}
 \author{Matt Kline}
 \date{\today}
 
@@ -183,7 +183,7 @@
 
 % C++ looks nicer if the ++ is in a monospace font and raised a bit.
 % Also, use uppercase numbers to match the capital C.
-\newcommand{\cpp}[1]{C\kern-0.1ex\raisebox{0.15ex}{\texttt{++}}{\addfontfeature{Numbers=LowercaseOff}#1}}
+\newcommand{\cpp}[1]{C\kern-0.1ex\raisebox{0.3ex}{\texttt{++}}{\addfontfeature{Numbers=LowercaseOff}#1}}
 \newcommand{\clang}[1]{C{\addfontfeature{Numbers=LowercaseOff}#1}}
 \newcommand{\csharp}{C\raisebox{0.25ex}{\#}}
 
@@ -262,7 +262,7 @@ The full text of the license is available at \\
 To Max, who once told me about a cool program he was using to type up
 his college papers.
 }
-\clearpage
+\cleardoublepage
 
 \pagenumbering{roman}
 \tableofcontents
