Finish (ha!) intro

--- a/back.tex
+++ b/back.tex
@@ -2,6 +2,7 @@
 \setlength\parindent{0pt}
 
 \chapter{Additional Resources}
+\label{resources}
 
 \section{For \texorpdfstring{\LaTeX}{LaTeX}}
 
@@ -75,7 +76,7 @@ Douglas Thomas's recent history of the typeface,
 
 {\fontspec[Ligatures=TeX,Scale=MatchLowercase]{Linux Libertine O}Linux Libertine},
 a typeface with support for dozens of languages and more than 2,000 characters,
-is used for some Greek in Appendix \ref{history}.
+is used for some Greek in Appendix~\ref{history}.
 You have probably seen it as the wordmark for Wikipedia.
 
 Finally,
