--- a/why.tex
+++ b/why.tex
@@ -152,3 +152,46 @@ such as OpenType fonts, giving you the same tools available to professional
 designers and publishers.
 
 \chapter{Another Guide?}
+
+One might wonder why the world needs another needs another \LaTeX{} guide.
+After all, it's been out for more than 30 years.
+A quick Amazon search finds nearly a dozen books on the topic.
+There are plenty of great resources online.
+(See Appendix~\ref{resources} for some of them.)
+
+Unfortunately, most of these guides have two fatal flaws: they are long,
+and they are old.
+The first is anathema to newcomers---if somebody asks about \LaTeX{},
+throwing a 200+ page book at them isn't an encouraging first step.
+The second matters because of how much the world of computer typesetting has
+changed.
+
+When \LaTeX{} was first released in 1986, none of the technologies we use today
+existed. Adobe wouldn't introduce their Portable Document Format for another
+seven years,
+and home computers wouldn't support it ubiquitously for several after that.
+Digital typography was a new field, and desktop publishing was \emph{just}
+getting off the ground.\punckern\endnote{\textit{Graphic Means:
+A History of Graphic Design Production}, directed by Briar Levit (2017)}
+This shows---badly---in most \LaTeX{} guides you find today.
+Look for instructions to change your document's font
+and become instantly inundated with bespoke nonsense.\punckern\footnote{%
+Take all criticisms of \LaTeX's past here with a grain of
+salt. After all, the fact that it has had such staying power that
+all of the technology around it became obsolete, multiple times, is astounding.}
+
+The good news is that  \LaTeX{} has improved in leaps and bounds in recent years,
+and it's time for a guide that doesn't weigh you down with decades of legacy.
+It's also time for a guide that doesn't try to be some comprehensive reference.
+After all, you're a smart, resourceful individual who knows how to use a search
+engine.
+This book will:
+\begin{itemize}
+\item Teach you the very basics of using \LaTeX.
+\item Point you to places where you can learn more.
+\item Show you how to use modern technologies like OpenType and micro-typography
+    to create professional-quality documents.
+\item End promptly thereafter.
+\end{itemize}
+
+Let's begin.
