--- a/why.tex
+++ b/why.tex
@@ -174,13 +174,13 @@ Digital typography was a new field, and desktop publishing was \emph{just}
 getting off the ground.\punckern\endnote{\textit{Graphic Means:
 A History of Graphic Design Production}, directed by Briar Levit (2017)}
 This shows---badly---in most \LaTeX{} guides you find today.
-Look for instructions to change your document's font
-and become instantly inundated with bespoke nonsense.\punckern\footnote{%
+If you look for instructions to change your document's font,
+you instantly get swamped with bespoke nonsense.\punckern\footnote{%
 Take all criticisms of \LaTeX's past here with a grain of
 salt. After all, the fact that it has had such staying power that
 all of the technology around it became obsolete, multiple times, is astounding.}
 
-The good news is that  \LaTeX{} has improved in leaps and bounds in recent years,
+The good news is that  \LaTeX{} has improved by leaps and bounds in recent years,
 and it's time for a guide that doesn't weigh you down with decades of legacy.
 It's also time for a guide that doesn't try to be some comprehensive reference.
 After all, you're a smart, resourceful individual who knows how to use a search
@@ -193,5 +193,4 @@ This book will:
     to create professional-quality documents.
 \item End promptly thereafter.
 \end{itemize}
-
 Let's begin.
